# project-blueprint

./: .env  .gitignore  CONTRIBUTING.md  README.md  bun.lockb  eslint.config.js  index.html  main.yml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  worklog.md
.github/workflows/: main.yml
docs/: algorithmes.md  architecture.md  notice-transfer-learning.md
download/: unrobot-vscode-0.1.0.vsix
public/: manifest.json  sw.js
public/datasets/: UnRobot_Dataset_V10_Domain_Experts_300.json  UnRobot_Dataset_V6_Multilingual_FR_EN_AR_200.json  UnRobot_Dataset_V7_Adversarial_450.json  UnRobot_Dataset_V8_Professional_LongTexts_250.json  UnRobot_Dataset_V9_Style_Personality_Fingerprint_560.json
public/models/: ai-detector.onnx
scripts/: benchmark.cjs  benchmark.ts  create_onnx_node.cjs  gen-icons.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: logo-unrobot.png.asset.json
src/components/: ErrorBoundary.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/data/: exampleTexts.ts
src/hooks/: useAIDetector.ts  useMLDetector.ts  usePlagiarism.ts  useTextCleaner.ts
src/lib/: cleaner.ts  humanizer.ts  report.ts  textAnalysis.ts  utils.ts  writerProfile.ts
src/pages/: Index.tsx  NotFound.tsx
src/workers/: textProcessor.worker.ts
supabase/: config.toml
upload/: awpa-SKILL-FR.md  humanizer-SKILL-FR.md
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+34 files in other folders)
