[package]
name = "unrobot-desktop"
version = "0.1.0"
description = "UnRobot Desktop — AI Detection & Plagiarism Checker"
authors = ["freemind25"]
edition = "2021"

[lib]
name = "unrobot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
quick-xml = "0.37"